# rust-less

./: .gitignore  README.md
cli/rustless_cli/: Cargo.toml  rustless_cli.db
cli/rustless_cli/src/: cli.rs  code.rs  main.rs  server.rs  storage.rs
host/fxnContainer/: Dockerfile
host/fxnContainer/docker_test/: Dockerfile
host/fxnContainer/docker_test/rustless_host_engine/: Cargo.toml
host/fxnContainer/docker_test/rustless_host_engine/src/: main.rs
host/fxnContainer/example_function_app/src/: main.rs
host/fxnContainer/rustless_engine_lib/: Cargo.toml
host/fxnContainer/rustless_host_engine/: Cargo.toml  cert.pem  key.pem  rustless_host.db
host/fxnContainer/rustless_host_engine/code/: Cargo.toml
host/fxnContainer/rustless_host_engine/container/: Dockerfile
host/fxnContainer/rustless_host_engine/src/: docker.rs  function_app_builder.rs  main.rs  storage.rs
shared/rustless_shared/: Cargo.toml
shared/rustless_shared/src/: lib.rs
src/: main.rs
