[package]
name = "rustless_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }
colored = "2.0.0"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde"] }
indicatif = "0.17.2"
futures = "0.3.25"
base64 = "0.13.1"
rustless_shared = { path = "../../shared/rustless_shared" }
chrono = "0.4.23"

