[package]
name = "rustless_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde"] }
