[package]
name = "rustless_host_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
rust-embed = "6.4.2"
tempfile = "3.3.0"
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde"] }
colored = "2.0.0"
base64 = "0.13.1"
rustless_shared = { path = "../../../shared/rustless_shared" }
portpicker = "0.1.1"
